[package]
name = "bevy_mod_bounding"
version = "0.1.2-alpha.0"
authors = ["Aevyrie Roessler <aevyrie@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Bounding box generation for the Bevy Engine."
repository = "https://github.com/aevyrie/bevy_mod_bounding/"
keywords = ["gamedev", "graphics", "bevy", "3d", "bounding"]
categories = ["game-engines", "rendering"]

[dependencies]
bevy = { version = "0.5", default-features = false, features = ["render"] }
#bevy = { git = "https://github.com/bevyengine/bevy", branch = "main", default-features = false, features = ["render"] }

[features]
ex = ["bevy/bevy_wgpu", "bevy/bevy_winit", "bevy/bevy_gltf", "bevy/x11"]

[[example]]
name = "demo"
required-features = ["ex"]
