[package]
name = "bevy_mod_bounding"
version = "0.1.2-alpha.0"
authors = ["Aevyrie Roessler <aevyrie@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Bounding box generation for the Bevy Engine."
repository = "https://github.com/aevyrie/bevy_mod_bounding/"
keywords = ["gamedev", "graphics", "bevy", "3d", "bounding"]
categories = ["game-engines", "rendering"]
resolver = "2"

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", branch = "main", version = "0.5" }

[[example]]
name = "demo"
